--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "emotion": "^11.0.0",
     "font-awesome": "^4.7.0",
     "framer-motion": "^7.2.0",
+    "i18next": "^21.9.1",
+    "i18next-browser-languagedetector": "^6.1.5",
+    "i18next-http-backend": "^1.4.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
+    "react-i18next": "^11.18.4",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
